--- a/WPFAgeCalculator/MainWindow.xaml
+++ b/WPFAgeCalculator/MainWindow.xaml
@@ -3,10 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFAgeCalculator"
+        xmlns:local="clr-namespace:WPFAgeCalculator" d:DataContext="{d:DesignInstance Type=local:AgeViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+    <Grid Background="#FFECECEC">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="8*"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <Label Content="Enter your birth date:"/>
+                <DatePicker SelectedDate="{Binding Date, Mode=OneWayToSource}" SelectedDateChanged="DatePicker_SelectedDateChanged"/>
+            </StackPanel>
+            <TextBlock Name="AgeText" Margin="0,10,0,0" Text="{Binding Age, Mode=OneWay, StringFormat='Your age is {0}'}"/>
+        </StackPanel>
     </Grid>
 </Window>
